k8s/firebook-redis-srh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firebook-redis-srh
  namespace: default
  labels:
    app: firebook-redis-srh
spec:
  selector:
    app: firebook-redis-srh
  ports:
    - { name: http, port: 80, targetPort: 80, protocol: TCP }
